RESOLVED FIXED226508
Fix unsafe access to m_upload in XMLHttpRequest::virtualHasPendingActivity()
https://bugs.webkit.org/show_bug.cgi?id=226508
Summary Fix unsafe access to m_upload in XMLHttpRequest::virtualHasPendingActivity()
Chris Dumez
Reported 2021-06-01 12:51:57 PDT
Fix unsafe access to m_upload in XMLHttpRequest::virtualHasPendingActivity() as virtualHasPendingActivity() may get called off the main thread and m_upload gets initialized lazily on the main thread.
Attachments
Patch (10.92 KB, patch)
2021-06-01 12:54 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-06-01 12:54:35 PDT
Geoffrey Garen
Comment 2 2021-06-01 13:19:58 PDT
Comment on attachment 430282 [details] Patch r=me
EWS
Comment 3 2021-06-01 15:03:42 PDT
Committed r278329 (238362@main): <https://commits.webkit.org/238362@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430282 [details].
Radar WebKit Bug Importer
Comment 4 2021-06-01 15:04:18 PDT
Note You need to log in before you can comment on or make changes to this bug.