Source/WebCore/xml/XMLHttpRequestUpload.h
@@ -40,7 +40,7 @@ public:
 
     void dispatchProgressEvent(const AtomString& type, unsigned long long loaded, unsigned long long total);
 
-    bool hasRelevantEventListener() const { return m_hasRelevantEventListener; }
+    bool hasRelevantEventListener() const;
 
 private:
     // EventTarget.
@@ -52,7 +52,6 @@ private:
     ScriptExecutionContext* scriptExecutionContext() const final { return m_request.scriptExecutionContext(); }
 
     XMLHttpRequest& m_request;
-    bool m_hasRelevantEventListener { false };
 };
     
 } // namespace WebCore
